fix spinner bug on iOS devices

--- a/src/components/spinner/spinner.module.scss
+++ b/src/components/spinner/spinner.module.scss
@@ -21,9 +21,9 @@
 
 @keyframes spin {
   from {
-    transform: rotateY(0);
+    transform: rotateY(0deg);
   }
   to {
-    transform: rotateY(360deg);
+    transform: rotateY(-360deg);
   }
 }
